# sqlman

./: .gitignore  README.md  pyproject.toml
src/sqlman/: help.py  list_from.py  parse.py
